tests/rosetta/out/Java/abelian-sandpile-model.error
javac error: exit status 1
/tmp/TestMochiToJavaabelian-sandpile-model508739328/001/AbelianSandpileModel.java:60: error: incompatible types: Object cannot be converted to List<List<Integer>>
                List<List<Integer>> v = ((List)pile.get(row)).get(col);
                                                                 ^
/tmp/TestMochiToJavaabelian-sandpile-model508739328/001/AbelianSandpileModel.java:61: error: bad operand types for binary operator '>'
                if (v > 3) {
                      ^
  first type:  List<List<Integer>>
  second type: int
/tmp/TestMochiToJavaabelian-sandpile-model508739328/001/AbelianSandpileModel.java:62: error: incompatible types: int cannot be converted to List<List<Integer>>
                    v = 3;
                        ^
/tmp/TestMochiToJavaabelian-sandpile-model508739328/001/AbelianSandpileModel.java:64: error: incompatible types: List<List<Integer>> cannot be converted to int
                line = line + ((Number)chars.get(v)).doubleValue();
                                                 ^
Note: /tmp/TestMochiToJavaabelian-sandpile-model508739328/001/AbelianSandpileModel.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
4 errors
